remove icon from traits

--- a/atopile/api-reference/components/resistor.mdx
+++ b/atopile/api-reference/components/resistor.mdx
@@ -2,25 +2,19 @@
 
 title: "Resistor"
 icon: microchip
-description: "A resistor is a two-terminal electrical component."
+description: ""
 ---
 
 
 ## Parameters
 
 <ParamField path='resistance' type='ohm'>
-
-Resistance of resistor in Ohms.
 </ParamField>
 
 <ParamField path='max_power' type='W'>
-
-Maximum power dissipation rating in Watts.
 </ParamField>
 
 <ParamField path='max_voltage' type='V'>
-
-Maximum voltage rating in Volts.
 </ParamField>
 
 
@@ -47,8 +41,6 @@ Maximum voltage rating in Volts.
 **pickable**
 
 [can_bridge](/atopile/api-reference/traits/can-bridge)
-
-Allows component or module to be used in bridging connections with the ~> operator for series connections.
 
 **simple_value_representation**
 
