--- a/atopile/api-reference/interfaces/i2c.mdx
+++ b/atopile/api-reference/interfaces/i2c.mdx
@@ -2,15 +2,13 @@
 
 title: "I2C"
 icon: right-left
-description: "I2C interface"
+description: ""
 ---
 
 
 ## Parameters
 
 <ParamField path='address' type='string'>
-
-I2C address of node. Expecting string representation of hex value '0x7F'
 </ParamField>
 
 <ParamField path='bus_addresses' type='string'>
