--- a/atopile/api-reference/traits/can-bridge.mdx
+++ b/atopile/api-reference/traits/can-bridge.mdx
@@ -1,7 +1,7 @@
 ---
 
 title: "can_bridge"
-icon: right-left
-description: "Allows component or module to be used in bridging connections with the ~> operator for series connections."
+icon: 
+description: ""
 ---
 
