Fix: Use ato add instead of install

--- a/atopile/quickstart.mdx
+++ b/atopile/quickstart.mdx
@@ -32,7 +32,7 @@ If you have KiCAD installed, you can now press on the PCB icon in the ato menu b
 ## A typical workflow
 
 1. Sketch your circuit on paper.
-2. Search https://packages.atopile.io and GitHub for pre-existing modules you need, and use `ato install` to install them.
+2. Search https://packages.atopile.io and GitHub for pre-existing modules you need, and use `ato add` to install them.
 3. Design a module and do its calculations using `ato` code.
 4. Run `ato build` to compile your project, choose components to suit your design, and update your layout (PCB) file.
 5. Use KiCAD to lay out any changes
@@ -46,7 +46,7 @@ graph TB
   A[Sketch] --> AA['ato create project'];
   AA --> BB[Pick a module];
   BB --> B{Package exists?};
-  B -->|Yes 🥳| C['ato install'];
+  B -->|Yes 🥳| C['ato add'];
   B -->|No| CC['ato create component' and Design it! 👨‍💻];
   C --> D[Hook it up];
   CC --> D;
