Fix: Discord links

--- a/atopile/support.mdx
+++ b/atopile/support.mdx
@@ -6,7 +6,7 @@ icon: 'pray'
 
 ## Immediate Support
 
-The "help" channel in [Discord](https://discord.gg/C9kZgkGS) is the best way to get an immediate hand with anything the docs don't cover.
+The "help" channel in [Discord](https://discord.gg/CRe5xaDBr3) is the best way to get an immediate hand with anything the docs don't cover.
 
 ## Commercial Support
 
