Update changelog to v11

--- a/atopile/changelog.mdx
+++ b/atopile/changelog.mdx
@@ -5,12 +5,23 @@ icon: 'rectangle-history'
 
 {/* https://www.mintlify.com/docs/content/components/update */}
 
-<Update label="v0.11 (Draft)" description="🚧 In Development">
+<Update label="v0.12 (Draft)" description="🚧 In Development">
 
 This version is currently under development. Stay tuned for updates!
 
 For up-to-date minor changes check out the [GitHub Releases](https://github.com/atopile/atopile/releases).
 
+</Update>
+
+<Update label="v0.11" description="🚀 Major KiCAD Plugin Rewrite, MCP, Library Cleanup, Enum Template Args, 3D Model Viewer">
+
+This release brings a major rewrite of the KiCAD plugin, making it easier than ever to apply layouts and interact with your designs directly from KiCAD with a single button. The Model Context Protocol (MCP) is now set up automatically, streamlining AI-assisted development workflows and package management.
+
+The atopile library and example projects have been thoroughly cleaned up, and the language now supports enums in template arguments, unlocking new design possibilities. The VSCode extension introduces a powerful 3D model viewer, making it simple to visualize your designs in three dimensions.
+
+Numerous bug fixes and small improvements enhance stability, performance, and the overall user experience across the CLI, library, and extension. For a complete list of changes and improvements, see the full changelog linked below.
+
+**Full Changelog**: https://github.com/atopile/atopile/releases/tag/v0.11.0
 
 </Update>
 
