add usage examples

--- a/atopile/api-reference/components/capacitor.mdx
+++ b/atopile/api-reference/components/capacitor.mdx
@@ -81,3 +81,18 @@ If set to `True`, require that interface is connected to something outside
 of the module it's defined in.
 </ParamField>
 
+<RequestExample>
+```ato Basic Usage
+import Capacitor
+
+capacitor = new Capacitor
+capacitor.capacitance = 100nF +/- 10%
+assert capacitor.max_voltage within 25V to 50V
+capacitor.package = "0603"
+
+electrical1 ~ capacitor.unnamed[0]
+electrical2 ~ capacitor.unnamed[1]
+# OR
+electrical1 ~> capacitor ~> electrical2
+```
+</RequestExample>
