--- a/atopile/api-reference/components/fan.mdx
+++ b/atopile/api-reference/components/fan.mdx
@@ -66,3 +66,21 @@ If set to `True`, require that interface is connected to something outside
 of the module it's defined in.
 </ParamField>
 
+<RequestExample>
+```ato Basic Usage
+import Fan, ElectricPower
+
+fan = new Fan
+
+# Connect power supply (typically 12V for PC fans)
+power_12v = new ElectricPower
+assert power_12v.voltage within 12V +/- 5%
+assert power_12v.max_current >= 200mA  # Typical fan current
+
+fan.power ~ power_12v
+
+# For PWM control, connect through a MOSFET or fan controller
+# fan.power.hv ~ power_12v.hv
+# fan.power.lv ~> pwm_controller ~> power_12v.lv
+```
+</RequestExample>
