--- a/atopile/api-reference/components/kicadfootprint.mdx
+++ b/atopile/api-reference/components/kicadfootprint.mdx
@@ -13,6 +13,12 @@ description: ""
 </ParamField>
 
 
+## Interfaces
+
+<ParamField path='pins[0]' type='Pad'>
+</ParamField>
+
+
 ## Global Attributes
 
 
