--- a/atopile/api-reference/interfaces/pad.mdx
+++ b/atopile/api-reference/interfaces/pad.mdx
@@ -69,3 +69,11 @@ If set to `True`, require that interface is connected to something outside
 of the module it's defined in.
 </ParamField>
 
+<RequestExample>
+```ato Basic Usage
+import Pad
+
+pad = new Pad
+electrical_signal ~ pad.net
+```
+</RequestExample>
