--- a/atopile/api-reference/interfaces/uart.mdx
+++ b/atopile/api-reference/interfaces/uart.mdx
@@ -84,3 +84,32 @@ If set to `True`, require that interface is connected to something outside
 of the module it's defined in.
 </ParamField>
 
+<RequestExample>
+```ato Basic Usage
+import UART, ElectricPower
+
+uart = new UART
+uart.base_uart.baud_rate = 115200
+
+# Connect power reference for logic levels
+power_3v3 = new ElectricPower
+assert power_3v3.voltage within 3.3V +/- 5%
+uart.base_uart.tx.reference ~ power_3v3
+uart.base_uart.rx.reference ~ power_3v3
+uart.rts.reference ~ power_3v3
+uart.cts.reference ~ power_3v3
+
+# Connect to microcontroller
+microcontroller.uart ~ uart
+
+# Connect to external UART device or RS232 transceiver
+external_device.uart_rx ~ uart.base_uart.tx.line
+external_device.uart_tx ~ uart.base_uart.rx.line
+
+# Hardware flow control (optional)
+external_device.rts ~ uart.cts.line
+external_device.cts ~ uart.rts.line
+
+# Common baud rates: 9600, 38400, 115200, 230400, 460800
+```
+</RequestExample>
