--- a/atopile/api-reference/components/bjt.mdx
+++ b/atopile/api-reference/components/bjt.mdx
@@ -81,3 +81,23 @@ If set to `True`, require that interface is connected to something outside
 of the module it's defined in.
 </ParamField>
 
+<RequestExample>
+```ato Basic Usage
+import BJT, Resistor, ElectricPower
+
+bjt = new BJT
+bjt.doping_type ="NPN"
+bjt.mpn = "C373737
+
+# Use as amplifier with bias resistors
+base_resistor = new Resistor
+collector_resistor = new Resistor
+power_supply = new ElectricPower
+
+# Basic amplifier configuration
+power_supply.hv ~> collector_resistor ~> bjt.collector
+bjt.emitter ~ power_supply.lv
+input_signal ~> base_resistor ~> bjt.base
+output_signal ~ bjt.collector
+```
+</RequestExample>
