--- a/atopile/api-reference/components/capacitorelectrolytic.mdx
+++ b/atopile/api-reference/components/capacitorelectrolytic.mdx
@@ -90,3 +90,33 @@ If set to `True`, require that interface is connected to something outside
 of the module it's defined in.
 </ParamField>
 
+<RequestExample>
+```ato Basic Usage
+import CapacitorElectrolytic, ElectricPower
+
+electrolytic_cap = new CapacitorElectrolytic
+electrolytic_cap.capacitance = 1000uF +/- 20%
+electrolytic_cap.max_voltage = 25V
+electrolytic_cap.package = "radial_8x12"  # 8mm diameter, 12mm height
+
+# Connect to power supply for bulk filtering
+power_supply = new ElectricPower
+assert power_supply.voltage within 12V +/- 10%
+
+# CRITICAL: Observe polarity! Anode to positive, cathode to negative
+power_supply.hv ~ electrolytic_cap.anode    # Positive terminal
+power_supply.lv ~ electrolytic_cap.cathode  # Negative terminal
+
+# Alternative bridge syntax (maintains polarity)
+power_supply.hv ~> electrolytic_cap ~> power_supply.lv
+
+# Common values and applications:
+# - 10-100uF: Local power supply filtering
+# - 100-1000uF: Bulk power supply capacitance  
+# - 1000-10000uF: Main power supply smoothing
+# - Audio coupling: 1-100uF (mind polarity!)
+
+# WARNING: Reverse voltage will damage electrolytic capacitors!
+# Use ceramic or film capacitors for AC coupling applications
+```
+</RequestExample>
