--- a/atopile/api-reference/components/diode.mdx
+++ b/atopile/api-reference/components/diode.mdx
@@ -87,3 +87,22 @@ If set to `True`, require that interface is connected to something outside
 of the module it's defined in.
 </ParamField>
 
+<RequestExample>
+```ato Basic Usage
+import Diode, Resistor, ElectricPower
+
+diode = new Diode
+diode.forward_voltage = 0.7V +/- 10%
+diode.current = 10mA +/- 5%
+diode.reverse_working_voltage = 50V
+diode.max_current = 100mA
+diode.package = "SOD-123"
+
+# Connect as rectifier
+ac_input ~ diode.anode
+diode.cathode ~ dc_output
+
+# With current limiting resistor
+power_supply.hv ~> current_limit_resistor ~> diode ~> power_supply.lv
+```
+</RequestExample>
