--- a/atopile/api-reference/components/inductor.mdx
+++ b/atopile/api-reference/components/inductor.mdx
@@ -87,3 +87,23 @@ If set to `True`, require that interface is connected to something outside
 of the module it's defined in.
 </ParamField>
 
+<RequestExample>
+```ato Basic Usage
+import Inductor
+
+inductor = new Inductor
+inductor.inductance = 10uH +/- 10%
+inductor.max_current = 2A
+inductor.dc_resistance = 50mohm +/- 20%
+inductor.self_resonant_frequency = 100MHz +/- 10%
+inductor.package = "0805"
+
+electrical1 ~ inductor.unnamed[0]
+electrical2 ~ inductor.unnamed[1]
+# OR
+electrical1 ~> inductor ~> electrical2
+
+# For filtering applications
+power_input ~> inductor ~> filtered_output
+```
+</RequestExample>
