--- a/atopile/api-reference/components/mosfet.mdx
+++ b/atopile/api-reference/components/mosfet.mdx
@@ -93,3 +93,26 @@ If set to `True`, require that interface is connected to something outside
 of the module it's defined in.
 </ParamField>
 
+<RequestExample>
+```ato Basic Usage
+import MOSFET, ElectricLogic, ElectricPower
+
+mosfet = new MOSFET
+mosfet.channel_type = MOSFET.ChannelType.N_CHANNEL
+mosfet.saturation_type = MOSFET.SaturationType.ENHANCEMENT
+mosfet.gate_source_threshold_voltage = 2.5V +/- 10%
+mosfet.max_drain_source_voltage = 60V
+mosfet.max_continuous_drain_current = 30A
+mosfet.on_resistance = 5mohm +/- 20%
+mosfet.package = "SOT-23"
+
+# Use as a switch
+gate_control = new ElectricLogic
+power_supply = new ElectricPower
+load = new ElectricLogic
+
+mosfet.gate ~ gate_control.line
+mosfet.source ~ power_supply.lv
+mosfet.drain ~ load.line
+```
+</RequestExample>
