--- a/atopile/api-reference/components/nfet.mdx
+++ b/atopile/api-reference/components/nfet.mdx
@@ -93,3 +93,26 @@ If set to `True`, require that interface is connected to something outside
 of the module it's defined in.
 </ParamField>
 
+<RequestExample>
+```ato Basic Usage
+import NFET, ElectricLogic, ElectricPower
+
+nfet = new NFET
+nfet.gate_source_threshold_voltage = 2.5V +/- 10%
+nfet.max_drain_source_voltage = 60V
+nfet.max_continuous_drain_current = 30A
+nfet.on_resistance = 5mohm +/- 20%
+nfet.package = "SOT-23"
+
+# Use as low-side switch
+gate_control = new ElectricLogic
+power_supply = new ElectricPower
+load = new ElectricLogic
+
+nfet.gate ~ gate_control.line
+nfet.source ~ power_supply.lv  # Connect to ground for low-side
+nfet.drain ~ load.line
+
+# When gate_control is HIGH, NFET conducts (load connected to ground)
+```
+</RequestExample>
