--- a/atopile/api-reference/components/opamp.mdx
+++ b/atopile/api-reference/components/opamp.mdx
@@ -99,3 +99,35 @@ If set to `True`, require that interface is connected to something outside
 of the module it's defined in.
 </ParamField>
 
+<RequestExample>
+```ato Basic Usage
+import OpAmp, Resistor, ElectricPower, Electrical
+
+opamp = new OpAmp
+opamp.bandwidth = 1MHz +/- 10%
+opamp.gain_bandwidth_product = 10MHz +/- 20%
+opamp.input_offset_voltage = 1mV +/- 50%
+opamp.slew_rate = 1V/us +/- 20%
+opamp.package = "SOIC-8"
+
+# Power supply connections (dual supply)
+power_pos = new ElectricPower
+power_neg = new ElectricPower
+assert power_pos.voltage within 5V +/- 5%
+assert power_neg.voltage within -5V +/- 5%
+opamp.power.hv ~ power_pos.hv
+opamp.power.lv ~ power_neg.lv
+
+# Non-inverting amplifier configuration
+feedback_resistor = new Resistor
+gain_resistor = new Resistor
+feedback_resistor.resistance = 10kohm +/- 1%
+gain_resistor.resistance = 1kohm +/- 1%
+
+# Connections for gain = 1 + (Rf/Rg) = 11
+input_signal ~ opamp.non_inverting_input
+opamp.inverting_input ~> gain_resistor ~> power_neg.lv
+opamp.output ~> feedback_resistor ~> opamp.inverting_input
+output_signal ~ opamp.output
+```
+</RequestExample>
