--- a/atopile/api-reference/components/pfet.mdx
+++ b/atopile/api-reference/components/pfet.mdx
@@ -93,3 +93,27 @@ If set to `True`, require that interface is connected to something outside
 of the module it's defined in.
 </ParamField>
 
+<RequestExample>
+```ato Basic Usage
+import PFET, ElectricLogic, ElectricPower
+
+pfet = new PFET
+pfet.gate_source_threshold_voltage = -2.5V +/- 10%
+pfet.max_drain_source_voltage = 30V
+pfet.max_continuous_drain_current = 20A
+pfet.on_resistance = 10mohm +/- 20%
+pfet.package = "SOT-23"
+
+# Use as high-side switch
+gate_control = new ElectricLogic
+power_supply = new ElectricPower
+load = new ElectricLogic
+
+pfet.gate ~ gate_control.line
+pfet.source ~ power_supply.hv  # Connect to positive supply for high-side
+pfet.drain ~ load.line
+
+# When gate_control is LOW, PFET conducts (load connected to Vcc)
+# Note: For P-channel, gate needs to be pulled low to turn on
+```
+</RequestExample>
