--- a/atopile/api-reference/components/powerswitch.mdx
+++ b/atopile/api-reference/components/powerswitch.mdx
@@ -84,3 +84,33 @@ If set to `True`, require that interface is connected to something outside
 of the module it's defined in.
 </ParamField>
 
+<RequestExample>
+```ato Basic Usage
+import PowerSwitch, ElectricPower, ElectricLogic
+
+# Create normally-open power switch
+power_switch = new PowerSwitch(normally_closed=False)
+
+# Connect input power
+input_power = new ElectricPower
+assert input_power.voltage within 5V +/- 5%
+power_switch.power_in ~ input_power
+
+# Connect control signal
+enable_signal = new ElectricLogic
+enable_signal.reference ~ input_power
+power_switch.logic_in ~ enable_signal
+
+# Connect switched output to load
+switched_output = new ElectricPower
+power_switch.switched_power_out ~ switched_output
+load_circuit ~ switched_output
+
+# When enable_signal is HIGH, power flows to load
+# When enable_signal is LOW (or floating), power is disconnected
+
+# For normally-closed switch (fails safe)
+fail_safe_switch = new PowerSwitch(normally_closed=True)
+# This switch passes power when control is LOW or floating
+```
+</RequestExample>
