--- a/atopile/api-reference/components/tvs.mdx
+++ b/atopile/api-reference/components/tvs.mdx
@@ -90,3 +90,33 @@ If set to `True`, require that interface is connected to something outside
 of the module it's defined in.
 </ParamField>
 
+<RequestExample>
+```ato Basic Usage
+import TVS, ElectricPower, Electrical
+
+tvs = new TVS
+tvs.reverse_breakdown_voltage = 5.1V +/- 5%
+tvs.max_current = 1A
+tvs.reverse_working_voltage = 5V
+tvs.package = "SOD-123"
+
+# Connect TVS for power line protection
+power_supply = new ElectricPower
+protected_line = new Electrical
+
+# TVS protects against voltage spikes
+protected_line ~ tvs.anode
+tvs.cathode ~ power_supply.lv  # Connect to ground
+
+# Bidirectional TVS for signal line protection
+signal_tvs = new TVS
+signal_tvs.reverse_breakdown_voltage = 3.3V +/- 5%
+signal_line = new Electrical
+
+signal_line ~ signal_tvs.anode
+signal_tvs.cathode ~ power_supply.lv
+
+# Common applications: ESD protection, power surge protection
+# TVS clamps voltage spikes to protect sensitive components
+```
+</RequestExample>
