--- a/atopile/api-reference/interfaces/i2c.mdx
+++ b/atopile/api-reference/interfaces/i2c.mdx
@@ -86,3 +86,24 @@ If set to `True`, require that interface is connected to something outside
 of the module it's defined in.
 </ParamField>
 
+<RequestExample>
+```ato Basic Usage
+import I2C, ElectricPower
+
+i2c_bus = new I2C
+i2c_bus.frequency = 400kHz  # Fast mode
+i2c_bus.address = 0x48  # Device address
+
+# Connect power reference for logic levels
+power_3v3 = new ElectricPower
+assert power_3v3.voltage within 3.3V +/- 5%
+i2c_bus.scl.reference ~ power_3v3
+i2c_bus.sda.reference ~ power_3v3
+
+# Connect to microcontroller
+microcontroller.i2c ~ i2c_bus
+
+# Connect to I2C sensor
+sensor.i2c ~ i2c_bus
+```
+</RequestExample>
