--- a/atopile/api-reference/interfaces/spi.mdx
+++ b/atopile/api-reference/interfaces/spi.mdx
@@ -72,3 +72,26 @@ If set to `True`, require that interface is connected to something outside
 of the module it's defined in.
 </ParamField>
 
+<RequestExample>
+```ato Basic Usage
+import SPI, ElectricPower, ElectricLogic
+
+spi_bus = new SPI
+
+# Connect power reference for logic levels
+power_3v3 = new ElectricPower
+assert power_3v3.voltage within 3.3V +/- 5%
+spi_bus.sclk.reference ~ power_3v3
+spi_bus.miso.reference ~ power_3v3
+spi_bus.mosi.reference ~ power_3v3
+
+# Connect to microcontroller
+microcontroller.spi ~ spi_bus
+
+# Connect to SPI device with chip select
+chip_select = new ElectricLogic
+chip_select.reference ~ power_3v3
+flash_memory.spi ~ spi_bus
+flash_memory.cs ~ chip_select
+```
+</RequestExample>
