--- a/atopile/essentials/3-add-component.mdx
+++ b/atopile/essentials/3-add-component.mdx
@@ -96,8 +96,11 @@ That is, `pin 2` says:
 
 ## 3) Use a package from the registry
 
-The [atopile package registry](https://packages.atopile.io) contains many pre-made [packages](./4-packages) for common components. For example, if you need an STM32 microcontroller, you can install the package:
+The [atopile package registry](https://packages.atopile.io) contains many pre-made [packages](./4-packages) for common components. For example, if you need an RP2040 microcontroller, you can install the package:
 
+```bash
+ato add atopile/rp2040
+```
 ## 4) Create custom part
 
 For parts not available through `ato create part`, you can manually add components to your parts directory.
