--- a/atopile/essentials/3-add-component.mdx
+++ b/atopile/essentials/3-add-component.mdx
@@ -1,6 +1,6 @@
 ---
 title: '3. Add a component'
-description: 'There are 4 ways to add components to a project.'
+description: 'Four different methods exist for adding components to a project.'
 icon: 'plus'
 ---
 
@@ -19,7 +19,7 @@ When you build your project, atopile will automatically select a resistor that m
 
 ## 2) Add specific component
 
-The embedded `ato create part` cli tool fetches a part and adds the pinout, footprint, and 3D model to your project.
+The embedded `ato create part` CLI tool fetches a part and adds the pinout, footprint, and 3D model to your project.
 
 ```bash
 ato create part
